# kite

./: .ghci  .gitignore  .hlint.yaml  ChangeLog.md  LICENSE  Makefile  README.md  TODO.md  brittany.yaml  default.nix  kite.cabal  kite.dhall  kite.nix  lam.nix  package.yaml  shell.nix  stack.yaml
.github/workflows/: main.yml
app/: Main.hs
base/: Test.lam
base/Data/: Bool.lam  Either.lam  List.lam  Maybe.lam  NonEmpty.lam  Semigroup.lam
base/Lam/: Functor.lam  Monoid.lam  Semigroup.lam  Show.lam  String.lam
benchmarks/: Main.hs
docs/: deriving.md  evaluation.md  implicits.md  syntax.md  type_aliases.md  typechecking.md
eval/: Cargo.toml
eval/benches/: eval.rs  inst.rs
eval/src/: dsl.rs  eval.rs  inst.rs  lib.rs  main.rs  test.rs
fib/: kite-package.dhall
fixtures/: A.lam  B.lam  List.lam  Maybe.lam  Simple.lam  Small.lam  Tiny.lam
fixtures/Data/: Bool.lam  Maybe.lam
nix/: sources.json
pkg/advent-of-code/: day1.kite  kite-package.toml
pkg/parser/: Parser.kite  kite-package.toml
pkg/std/: IO.kite  IOTest.kite  ImplicitTest.kite  ListTest.kite  Test.kite  kite-package.toml
pkg/std/Control/: Alternative.kite  Applicative.kite
pkg/std/Control/Monad/: State.kite
pkg/std/Data/: Bool.kite  Char.kite  Either.kite  Eq.kite  Function.kite  Int.kite  List.kite  Maybe.kite  Monad.kite  Monoid.kite  Ord.kite  Read.kite  Semigroup.kite  Show.kite  String.kite  Tuple.kite  Unit.kite
pkg/std/Kite/: String.kite
pkg/std/Test/: Assert.kite
src/: AST.hs  Canonical.hs  Canonicalise.hs  Chez.hs  Constraint.hs  Desugar.hs  ELC.hs  Error.hs  Eval.hs  EvalLC.hs  ExpandExports.hs  ExpandImports.hs  Expr.hs  Infer.hs  Interpret.hs  KiteCore.hs  LC.hs  ModuleGraphCompiler.hs  ModuleGraphTypechecker.hs  ModuleGroup.hs  ModuleGroupCompiler.hs  ModuleGroupTypechecker.hs  ModuleLoader.hs  NameGen.hs  Package.hs  Parse.hs  Prim.hs  Print.hs  Repl.hs  Syn.hs  Syntax.hs  THIH.hs  Translate.hs  Type.hs  Type2.hs  Typecheck.hs  Util.hs
src/AST/: DSL.hs
src/Canonical/: Primitive.hs
src/Chez/: Compile.hs  Optimise.hs  Print.hs
src/Constraint/: Expr.hs  FromSyn.hs  Generate.hs  GenerateM.hs  Primitive.hs  Print.hs  Solve.hs
src/Constraint/Generate/: Bind.hs  Data.hs  M.hs  Module.hs  Pattern.hs
src/Data/: Name.hs
src/Data/Name/: Gen.hs  Print.hs
src/ELC/: Compile.hs  Primitive.hs
src/Infer/: NameGen.hs  W.hs
src/KiteCore/: Compile.hs  Inst.hs
src/LC/: Compile.hs  Eval.hs  Execute.hs  Print.hs
src/Package/: Spec.hs
src/Syn/: Parse.hs  Print.hs  Typed.hs
src/Syn/Parse/: Common.hs  Expr.hs  Pattern.hs  Type.hs
src/Type/: DSL.hs  FromSyn.hs  Function.hs  Module.hs  Primitive.hs  Print.hs  ToTyped.hs  Type.hs
src/Typecheck/: Desugar.hs  Error.hs  Primitive.hs  THIH.hs  Translate.hs
std/: Fib.lam  IO.kite  IO.lam  IOTest.kite  IOTest.lam  Lazy.kite  ListTest.kite  ListTest.lam  Test.lam  kite-package.dhall
std/Control/: Alternative.kite
std/Control/Monad/: State.kite
std/Data/: Alternative.kite  Alternative.lam  Applicative.kite  Applicative.lam  Bool.kite  Bool.lam  Char.kite  Either.kite  Either.lam  Eq.kite  Eq.lam  Function.kite  Function.lam  Functor.kite  Functor.lam  Int.kite  Int.lam  List.kite  List.lam  Maybe.kite  Maybe.lam  Monad.kite  Monad.lam  Monoid.lam  NonEmpty.kite  NonEmpty.lam  Ord.kite  Ord.lam  Semigroup.lam  Show.kite  Show.lam  String.kite  String.lam  Traversable.kite  Tuple.kite  Unit.lam
std/Kite/: Bool.kite  List.kite  README.md
std/Lam/: Bool.lam  List.lam  Monoid.lam  README.md  String.lam
std/Test/: Assert.kite
std/Text/: Parser.kite
test/: ConstraintTest.hs  Main.hs  ParseTest.hs  PrintTest.hs  RoundTrip.hs  Spec.hs  hlint.hs
test/Integration/: Parse.hs  Typecheck.hs
test/Test/: AST.hs  Constraint.hs  Diff.hs  QQ.hs  Type.hs  Type2.hs
test/Test/Constraint/: Bind.hs  FromSyn.hs  Module.hs  Pattern.hs
test/Test/KiteCore/: Compile.hs
test/Test/Syn/: Parse.hs  Print.hs  RoundTrip.hs
test/Test/Type/: Module.hs
test/fixtures/: B.kite  C.lam  List.kite  ParseFailure.lam  Simple.lam  SimpleIO.kite  SimpleLet.kite  Tiny.lam  kite-package.toml
test/fixtures/Data/: Bool.lam  Maybe.kite  Maybe.lam
test/fixtures/naming/fail/: UnknownTypeclassInstance.lam  UnknownVariable.lam
test/fixtures/parse/fail/: CaseIndent.kite  RecordProjectionWithWhitespace.kite
test/fixtures/parse/pass/: CaseIndent.kite  P1.kite  P10.kite  P11.kite  P2.kite  P3.kite  P4.kite  P5.kite  P6.kite  P7.kite  P8.kite  P9.kite
test/fixtures/typecheck/fail/: BadAnnotation.kite  BadAnnotation.lam  BadCaseBranch.kite  BadInstanceMethod.lam  BadPatternMatch.kite  DuplicatePatternVariable.kite  DuplicatePatternVariable.lam  NotEnoughRecordFields.kite  TuplePatternMismatch.kite  TypeMismatchInTypeclassMethodApplication.lam  UnknownConstructor.kite  UnknownDataType.kite  UnknownDataType.lam  UnknownInstanceMethod.lam  UnknownTypeclassInFunctionConstraint.lam  UnknownTypeclassInstance.lam  UnknownVariable.kite  UnknownVariable.lam
test/fixtures/typecheck/pass/: ApplicativeList.kite  Args.kite  Compose.kite  EqList.kite  ExecState.kite  FunctorEither.kite  FunctorMaybe.kite  HigherKindApplication.kite  Implicit.kite  MonadState.kite  SimplifiedHigherKindExample.kite  T1.kite  T1.lam  T10.kite  T2.kite  T2.lam  T3.kite  T3.lam  T4.kite  T4.lam  T5.kite  T5.lam  T6.kite  T6.lam  T7.kite  T7.lam  T8.kite  T9.kite  T9.lam  TupleFirst.kite  TupleTest.kite  Tuples.kite
