cabal-version: 1.12

name:           kite
version:        0.1.0.0
synopsis:       A Haskell-like language for scripting and web apps
description:    Kite is a statically typed, strict, purely functional programming language with full type inference.
                It's the core parts of Haskell with better ergonomics, an interpreter, native JS
                support and much better tooling.
                .
                Kite targets the Ruby use case: web applications and scripts. For teams building big
                Rails apps that are struggling with stability and productivity as their codebase
                grows, Kite should provide a compelling alternative.
category:       compiler
homepage:       https://github.com/hmac/kite#readme
bug-reports:    https://github.com/hmac/kite/issues
author:         Harry Maclean
maintainer:     harry@hmac.dev
copyright:      2019 Harry Maclean
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/hmac/kite

library
  exposed-modules:
      AST
      Canonical
      Canonical.Primitive
      Canonicalise
      Data.Name
      ELC
      ELC.Compile
      ELC.Primitive
      ExpandExports
      ExpandImports
      LC
      LC.Compile
      LC.Eval
      LC.Execute
      LC.Print
      Print
      ModuleGroup
      ModuleGroupCompiler
      ModuleGroupTypechecker
      ModuleLoader
      NameGen
      Repl
      Syn
      Syn.Parse
      Syn.Parse.Common
      Syn.Print
      Syn.Typed
      Type
      Type.FromSyn
      Type.Module
      Type.Print
      Type.ToTyped
      Type.Primitive
      Util
      Interpret
      Chez
      Chez.Compile
      Chez.Print
      Chez.Optimise
  other-modules:
      Paths_kite

  hs-source-dirs:
      src
  default-extensions: OverloadedStrings LambdaCase TupleSections DeriveDataTypeable Rank2Types TemplateHaskell
  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , containers
    , directory
    , extra
    , hedgehog
    , megaparsec
    , mtl
    , optparse-generic
    , pretty-simple
    , prettyprinter
    , prettyprinter-ansi-terminal
    , semigroupoids
    , text
    , transformers
  default-language: Haskell2010

executable kite
  main-is: Main.hs
  other-modules:
      Paths_kite
  hs-source-dirs:
      app
  default-extensions: OverloadedStrings LambdaCase TupleSections DeriveDataTypeable Rank2Types TemplateHaskell
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Werror
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , containers
    , directory
    , extra
    , hedgehog
    , kite
    , megaparsec
    , mtl
    , optparse-generic
    , pretty-simple
    , prettyprinter
    , prettyprinter-ansi-terminal
    , semigroupoids
    , text
    , transformers
  default-language: Haskell2010

executable kite-bench
  main-is: Main.hs
  other-modules:
      Paths_kite
  hs-source-dirs:
      benchmarks
  default-extensions: OverloadedStrings LambdaCase TupleSections DeriveDataTypeable Rank2Types TemplateHaskell
  ghc-options:
    -O2
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Werror
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , containers
    , criterion
    , directory
    , extra
    , filepath
    , hedgehog
    , kite
    , megaparsec
    , mtl
    , optparse-generic
    , pretty-simple
    , prettyprinter
    , prettyprinter-ansi-terminal
    , semigroupoids
    , text
    , transformers
  default-language: Haskell2010

test-suite kite-hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  hs-source-dirs:
      test
      src
  default-extensions: OverloadedStrings LambdaCase TupleSections DeriveDataTypeable Rank2Types TemplateHaskell
  build-depends:
      base >=4.7 && <5
    , containers
    , directory
    , extra
    , hedgehog
    , hlint
    , kite
    , megaparsec
    , mtl
    , optparse-generic
    , pretty-simple
    , prettyprinter
    , prettyprinter-ansi-terminal
    , semigroupoids
    , text
    , transformers
  default-language: Haskell2010

test-suite kite-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Integration.Typecheck
      Integration.Parse
      Test.QQ
      Test.Syn.Parse
      Test.Syn.Print
      Test.Syn.RoundTrip
      Test.Type
      Test.Type.Module
      Paths_kite
  hs-source-dirs:
      test
  default-extensions: OverloadedStrings LambdaCase TupleSections DeriveDataTypeable Rank2Types TemplateHaskell
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Werror
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , containers
    , directory
    , extra
    , filepath
    , hedgehog
    , hspec
    , hspec-hedgehog
    , hspec-megaparsec
    , kite
    , megaparsec
    , mtl
    , optparse-generic
    , pretty-simple
    , prettyprinter
    , prettyprinter-ansi-terminal
    , semigroupoids
    , template-haskell
    , text
    , transformers
  default-language: Haskell2010
